<resources>
    <string name="app_name">UR Network</string>
    <string name="login">Login</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="enter_username">Enter username...</string>
    <string name="enter_password">Password...</string>
    <string name="create_a_new_user">Create a new user</string>
    <string name="create">Create</string>
    <string name="ur_network">UR Network</string>
    <string name="invalid_login">Invalid username and/or password</string>
    <string name="user_already_exists">This user already exists</string>
    <string name="email_already_exists">This email already exists</string>
    <string name="username_default">Username: DEFAULT</string>
    <string name="first_name">First name:</string>
    <string name="enter_your_first_name">Enter your first name...</string>
    <string name="last_name">Last name:</string>
    <string name="enter_your_last_name">Enter your last name...</string>
    <string name="birthday">Birthday:</string>
    <string name="enter_your_birthday">MM/DD/YYYY</string>
    <string name="profile_picture">Profile picture:</string>
    <string name="create_account">Create account</string>
    <string name="profile_picture_image">Profile picture image</string>
    <string name="take_picture">Take picture</string>
    <string name="must_grant_camera">You must grant permission to take picture</string>
    <string name="email">Email:</string>
    <string name="enter_email">Enter email...</string>
    <string name="email_default">Email: DEFAULT</string>
    <string name="hometown">Hometown:</string>
    <string name="enter_your_hometown">Enter your hometown...</string>
    <string name="bio">Bio:</string>
    <string name="tell_about_yourself">Tell us about yourself...</string>
    <string name="update_info">Update info</string>
    <string name="logout">Logout</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>


    <string name="write_a_new_post">Write a new post!</string>
    <string name="type_your_post_here_nand_or_attach_an_image">Type your post here...</string>
    <string name="post_an_image">Post an image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_this_person">Favorite this person</string>
    <string name="unfavorite_this_person">Unfavorite this person</string>
    <string name="birthday_">Birthday:</string>
    <string name="favorited">Favorited!</string>
</resources>
