<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aproject02.csc214.project2_network.UpdateAccountActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_default"
            android:padding="5sp"
            android:textSize="17sp"
            />
        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_default"
            android:padding="5sp"
            android:textSize="17sp"
            android:layout_below="@id/email_text"
            />

        <LinearLayout
            android:id="@+id/first_name_layout"
            android:layout_below="@id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="17sp"
                />
            <EditText
                android:id="@+id/first_name_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_first_name"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/last_name_layout"
            android:layout_below="@id/first_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="17sp"
                />
            <EditText
                android:id="@+id/last_name_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_last_name"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/birthday_layout"
            android:layout_below="@id/last_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textSize="17sp"
                />
            <EditText
                android:id="@+id/birthday_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_birthday"
                android:inputType="date"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/hometown_layout"
            android:layout_below="@id/birthday_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hometown"
                android:textSize="17sp"
                />
            <EditText
                android:id="@+id/hometown_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_hometown"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bio_layout"
            android:layout_below="@id/hometown_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textSize="17sp"
                />
            <EditText
                android:id="@+id/bio_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tell_about_yourself"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/profile_pic_layout"
            android:layout_below="@id/bio_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_picture"
                android:textSize="17sp"
                />
            <ImageView
                android:id="@+id/profile_pic_view"
                android:maxWidth="30sp"
                android:maxHeight="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_picture_image"
                />
            <Button
                android:id="@+id/take_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_picture"
                android:onClick="takePicture"
                />
        </LinearLayout>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_pic_layout"
            android:layout_centerHorizontal="true"
            android:text="@string/create_account"
            android:onClick="updateAccount"
            />


    </RelativeLayout>

</RelativeLayout>
