<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aproject02.csc214.project2_network.NewUserCreation">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_default"
            android:padding="5sp"
            android:textSize="17sp"
            />
        <LinearLayout
            android:id="@+id/first_name_layout"
            android:layout_below="@id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="17sp"
                />
            <EditText
                android:id="@+id/first_name_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_first_name"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/last_name_layout"
            android:layout_below="@id/first_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="17sp"
                />
            <EditText
                android:id="@+id/last_name_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_last_name"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/birthday_layout"
            android:layout_below="@id/last_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textSize="17sp"
                />
            <EditText
                android:id="@+id/birthday_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_birthday"
                android:inputType="date"
                />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
