<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aproject02.csc214.project2_network.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:padding="10sp"
        android:textSize="35sp"
        android:textColor="#0064ff"
        android:text="@string/ur_network"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/existing_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp">

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                />
            <LinearLayout
                android:id="@+id/enter_username_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/login_text">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="15sp"
                    />
                <EditText
                    android:id="@+id/enter_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/enter_password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/enter_username_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="15sp"
                    />
                <EditText
                    android:id="@+id/enter_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    />
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_below="@id/enter_password_layout"
                android:layout_centerHorizontal="true"
                android:onClick="loginUser"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/existing_user"
            android:padding="10sp">

            <TextView
                android:id="@+id/new_user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_user"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                />
            <LinearLayout
                android:id="@+id/new_username_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/new_user_text">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="15sp"
                    />
                <EditText
                    android:id="@+id/enter_new_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/new_password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/new_username_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="15sp"
                    />
                <EditText
                    android:id="@+id/enter_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    />
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_below="@id/new_password_layout"
                android:layout_centerHorizontal="true"
                android:onClick="createNewUser"
                />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
